--- a/Slike/follow_circle_err.tex
+++ b/Slike/follow_circle_err.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.5]{./Slike/follow_circle_err.eps}
-	\caption{Signal napake pri sledenju krožnici}
+	\caption{Signal napake pri sledenju kro\v{z}nici}
 	\label{fig:follow_circle_err}
 \end{figure}
