--- a/Slike/friction_measure.tex
+++ b/Slike/friction_measure.tex
@@ -11,13 +11,13 @@
 	\subfigure[Tretji sklep]{%
 		\includegraphics[scale=0.3]{./Slike/mesTorque3.eps}
 	}
-	\subfigure[Četrti sklep]{%
+	\subfigure[\v{C}etrti sklep]{%
 		\includegraphics[scale=0.3]{./Slike/mesTorque4.eps}
 	}
 	\subfigure[Peti sklep]{%
 		\includegraphics[scale=0.3]{./Slike/mesTorque5.eps}
 	}
-	\subfigure[Šesti sklep]{%
+	\subfigure[\v{S}esti sklep]{%
 		\includegraphics[scale=0.3]{./Slike/mesTorque6.eps}
 	}
 	\subfigure[Sedmi sklep]{%
