--- a/Slike/torque_follow_step.tex
+++ b/Slike/torque_follow_step.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[!ht]
 	\centering
 	\includegraphics[scale=0.5]{./Slike/torque_follow_step.eps}
 	\caption{Odziv sklepa na signal stopnice.}
