--- a/Tabele/vel_step.tex
+++ b/Tabele/vel_step.tex
@@ -6,12 +6,12 @@
 		\hline
 		$ t_m $ & = & 0,012 \\
 		$ t_r $ & = & 0,086 \\
-		$ t_s $ & = & 0,316 \\
 		$ t_p $ & = & 0,166 \\
 		$ M_p $ & = & 0,1004 \\
+		$ t_s $ & = & 0,316 \\
 		\hline
 		\end{tabular}
 	\end{footnotesize}
-	\caption{Opis UDP paketa, ki ga stre\v{z}nik po\v{s}lje klientu.}
+	\caption{Inženerski pokazatelji na odziv stopničaste reference pri hitrostnem vodenju.}
 	\label{table:vel_stepy}
 \end{table}
